# dangerous-endpoint-detector

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
backend/: main.py
dangerous_endpoints/: __init__.py  cli.py  core.py
examples/: test_example.py  test_example_extended.py
frontend/: index.html  package.json
frontend/src/: App.jsx
